# causal_decision_debugger

./: .gitattributes  .gitignore  CLAUDE.md  README.md  causal_decision_debugger_build_spec.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: assumption-ledger-agent.md  causal-methodologist.md  sql-safety-reviewer.md
.claude/skills/causal-decision-debugger/: SKILL.md
.claude/skills/causal-decision-debugger/reference/: assumption-ledger.md  causal-glossary.md  causal-spec-schema.md
.claude/skills/causal-decision-debugger/scripts/: check_balance.py  check_timestamps.py  generate_report.py  profile_dataframe.py  run_pipeline.py  suggest_method.py  validate_causal_spec.py
.claude/skills/causal-decision-debugger/templates/: data_sources.yaml
.github/workflows/: ci.yml  install-test.yml
agents/: assumption-ledger-agent.md  causal-methodologist.md  data-scout.md  report-writer.md  sql-safety-reviewer.md
examples/onboarding_retention/: assumption_ledger.yaml  causal_spec.yaml  data_sources.yaml  generate_synthetic.py  method_plan.json  report.md
skills/causal-decision-debugger/: SKILL.md
skills/causal-decision-debugger/reference/: causal-spec-schema.md  report-template.md  sql-safety-rules.md
skills/causal-decision-debugger/scripts/: bootstrap.py
skills/causal-decision-debugger/templates/: report.md
skills/diagnose/: SKILL.md
skills/diagnose/reference/: assumption-ledger.md  causal-spec-schema.md  method-router.md
skills/diagnose/scripts/: _install_paths.py  bootstrap.py
skills/diagnose/templates/: assumption_ledger.yaml  causal_spec.yaml  method_plan.json  technical_appendix.md
src/causal_debugger/: __init__.py  cli.py  pipeline.py
src/causal_debugger/data/: balance.py  io.py  profile.py  timestamps.py
src/causal_debugger/methods/: ab_test.py  cate.py  did.py  doubly_robust.py  ipw.py  its.py  iv.py  matching.py  rdd.py  router.py  synthetic_control.py
src/causal_debugger/refutation/: placebo.py  sensitivity.py  subset.py
src/causal_debugger/reporting/: render.py
src/causal_debugger/scenarios/: dgps.py
src/causal_debugger/schemas/: __init__.py  assumption_ledger.schema.json  causal_spec.schema.json  estimate_result.schema.json  identifiability_failure.schema.json  refutation_result.schema.json
src/causal_debugger/spec/: validate.py
tests/: test_pipeline.py  test_wheel_contents.py
tests/contracts/: test_schemas.py  test_templates.py
tests/data/: test_balance.py  test_profile.py  test_timestamps.py
tests/methods/: test_ab_test.py  test_cate.py  test_did.py  test_doubly_robust.py  test_ipw.py  test_its.py  test_iv.py  test_matching.py  test_rdd.py  test_router.py  test_synthetic_control.py
tests/refutation/: test_placebo.py  test_sensitivity.py  test_subset.py
tests/reporting/: test_render.py  test_report_quality.py
tests/scenarios/: test_dgps.py
tests/scripts/: test_bin_shim.py  test_bootstrap.py  test_install_paths.py
tests/spec/: test_validate.py
