[project]
name = "causal-debugger"
version = "0.1.0"
description = "Causal Decision Debugger: Claude Code Skill + Python toolkit for decision-grade causal inference."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Causal Decision Debugger Contributors" },
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26,<2.3",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "linearmodels>=6.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "jsonschema>=4.21",
    "dowhy>=0.11",
    "econml>=0.15",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "hypothesis>=6.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/causal_debugger"]

[tool.hatch.build.targets.sdist]
include = ["src/causal_debugger", "README.md", "LICENSE"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:dowhy.*",
    "ignore::DeprecationWarning:econml.*",
    "ignore::FutureWarning:pandas.*",
]

[tool.coverage.run]
branch = true
source = ["src/causal_debugger"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["analysis", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
