[project]
name = "causal-debugger"
version = "0.2.0"
description = "Causal Decision Debugger: Claude Code Skill + Python toolkit for decision-grade causal inference."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Causal Decision Debugger Contributors" },
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26,<3.0",
    # scipy upper-bound is dictated by dowhy 0.14 which pins scipy<=1.15.3 on Python <3.13;
    # raise this once dowhy relaxes the cap.
    "scipy>=1.11,<1.16",
    # scikit-learn upper-bound is dictated by econml 0.16 which pins scikit-learn<1.7;
    # raise this once econml relaxes the cap.
    "scikit-learn>=1.6,<1.7",
    "statsmodels>=0.14",
    "linearmodels>=7.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "jsonschema>=4.21",
    "dowhy>=0.11",
    "econml>=0.15",
    "pyarrow>=15.0",
]

[project.scripts]
causal-debugger = "causal_debugger.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "hypothesis>=6.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/causal_debugger"]

# Hatchling already picks up package data files when packages= is set, but be
# explicit so a future repo move or build-tool change cannot silently drop the
# JSON schemas — they are loaded at runtime via importlib.resources.
[tool.hatch.build.targets.wheel.force-include]
"src/causal_debugger/schemas/causal_spec.schema.json" = "causal_debugger/schemas/causal_spec.schema.json"
"src/causal_debugger/schemas/assumption_ledger.schema.json" = "causal_debugger/schemas/assumption_ledger.schema.json"
"src/causal_debugger/schemas/estimate_result.schema.json" = "causal_debugger/schemas/estimate_result.schema.json"
"src/causal_debugger/schemas/identifiability_failure.schema.json" = "causal_debugger/schemas/identifiability_failure.schema.json"
"src/causal_debugger/schemas/refutation_result.schema.json" = "causal_debugger/schemas/refutation_result.schema.json"

[tool.hatch.build.targets.sdist]
include = ["src/causal_debugger", "README.md", "LICENSE"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:dowhy.*",
    "ignore::DeprecationWarning:econml.*",
    "ignore::FutureWarning:pandas.*",
]

[tool.coverage.run]
branch = true
source = ["src/causal_debugger"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["analysis", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
